--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="center">
-        <h1>اسراء</h1>
+        <h1>ملك</h1>
         <button class="op" onclick="see()">Click me</button>
     </div>
 <script src="main.js"></script>
