--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
 <body>
     <div class="center">
         <h1>ملك</h1>
-        <button class="op" onclick="see()">Click me</button>
     </div>
+
+    <div class="center">
+        <h1>اسراء</h1>
+    </div>
+
+    <div class="center">
+        <h1>ميراء</h1>
+    </div>
+
 <script src="main.js"></script>
 </body>
 </html>
