--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="center">
-        <h1>ميراء</h1>
+        <h1>ميرا</h1>
     </div>
 
 <script src="main.js"></script>
